# htslib

./: .gitignore  CMakeLists.txt  config.in.h  hfile.c
os/: rand.c
